--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Mostrar LOG MySQL
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=off
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=off
 
 # File limits
 spring.servlet.multipart.max-file-size=10MB
